# Build-a-Bird

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/build_a_bird/app/: __init__.py  entities.py  launch.py  utils.py
src/build_a_bird/app/routes/: api.py
src/build_a_bird/app/static/css/: styling.css
src/build_a_bird/app/static/html/: about.html  index.html
src/build_a_bird/app/static/js/: api.js  index.js
src/build_a_bird/tests/: README.md  test_api_endpoints.py  test_email_api.py  test_email_providers.py  test_entities.py  test_text2img_providers.py
